# genomic-variant-data-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  backend.dev.hcl  compose.yaml  locals.tf  main.tf  mise.toml  pyproject.toml  terraform.tf  variables.tf
.claude/: settings.json
.github/actions/python/: action.yml
.github/actions/terraform/: action.yml
.github/workflows/: ci.yml
environments/dev/: terragrunt.hcl
environments/prod/: terragrunt.hcl
modules/analytics/: README.md  iam.tf  locals.tf  main.tf  variables.tf
modules/analytics/data_lake/: README.md  analytics.tftest.hcl  locals.tf  main.tf
modules/analytics/data_warehouse/: README.md
modules/ingestion/: README.md  data.tf  iam.tf  ingestion.tftest.hcl  locals.tf  main.tf  variables.tf
modules/ingestion/src/: handler.py
modules/ingestion/tests/: conftest.py  test_handler.py
modules/processing/: README.md  iam.tf  locals.tf  main.tf  processing.tftest.hcl  variables.tf
modules/processing/scripts/: transform.py
modules/processing/tests/: test_transform.py
modules/storage/: README.md  main.tf  storage.tftest.hcl  variables.tf
