[project]
name = "genomic-variant"
version = "0.1.0"
description = ""
authors = [
    {name = "paty-oliveira",email = "dev.patricia.oliveira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
